Chess Club/src/objects/Year__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <formula>AND(OR (Start_Date__c &lt;= TODAY(), ISNULL(Start_Date__c )), Next_Start_Date__c &gt; TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exempt_Gender__c</fullName>
        <defaultValue>&quot;Female&quot;</defaultValue>
        <description>Select which gender to charge membership fee</description>
        <label>Exempt Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Subscription_Fee__c</fullName>
        <label>Maximum Subscription Fee</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Fee__c</fullName>
        <label>Membership Fee</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Start_Date__c</fullName>
        <defaultValue>DATE(YEAR(TODAY())+1,9,1)</defaultValue>
        <label>Next Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Starting_Date__c</fullName>
        <label>Next Starting Date</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Previous Years</relationshipLabel>
        <relationshipName>Subscription_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Semester_Days__c</fullName>
        <defaultValue>7*(52-17)</defaultValue>
        <label>Second Semester Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Semester_Start_Date__c</fullName>
        <formula>Next_Start_Date__c -  Second_Semester_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Semester Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Previous_Year__r.Next_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Subscription Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Previous_Year__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Next_Start_Date__c</columns>
        <columns>Current__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StartDateAfterNextStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;  Next_Start_Date__c</errorConditionFormula>
        <errorMessage>This start date is after the next start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateAfterSecondSemesterStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;= Second_Semester_Start_Date__c</errorConditionFormula>
        <errorMessage>Start date is after second semester start date</errorMessage>
    </validationRules>
</CustomObject>